manifests/infraserver/provisioning/deployment-kernel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kernel-provisioning
  namespace: provisioning
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kernel-provisioning
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kernel-provisioning
    spec:
      containers:
      - name: kernel-provisioning
        image: xavor/kernel-provisioning:2.15
        ports:
        - name: http
          containerPort: 80
          hostPort: 8081
          protocol: TCP
        - name: dynamic
          containerPort: 8080
        volumeMounts:
        - name: configs
          mountPath: /configs
        - name: provisioning-content
          mountPath: /var/www/html/content
          readOnly: true
      volumes:
      - name: configs
        configMap:
          name: provisioning-configs
      - name: provisioning-content
        persistentVolumeClaim:
          claimName: provisioning-content
