manifests/infraserver/provisioning/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: provisioning
  namespace: provisioning
spec:
  ingressClassName: nginx
  rules:
  - host: boot.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kernel-provisioning
            port:
              number: 80
